generator client {
  provider = "prisma-client-js" // ✅ required for Prisma v7
}

datasource db {
  provider = "postgresql"
}

// ENUMS
enum UserRole {
  USER
  ADMIN
}

enum OnboardingStatus {
  PENDING
  COMPLETED
}

enum Salutation {
  MR
  MS
  MRS
  MX
  OTHER
}

enum Gender {
  MALE
  FEMALE
  NON_BINARY
  OTHER
  PREFER_NOT_TO_SAY
}

enum Chattiness {
  chatterbox
  chatty_when_comfortable
  quiet
}

enum PetsPreference {
  love_pets
  depends_on_animal
  no_pets
}

enum VehicleType {
  sedan
  hatchback
  suv
  minibus
  coupe
  convertible
  pickup
  van
  truck
}

enum DocumentType {
  VEHICLE_IMAGE
  VEHICLE_DOCUMENT
  DRIVING_LICENSE
  INSURANCE_DOCUMENT
}

enum DlVerificationStatus {
  PENDING
  APPROVED
  DECLINED
  RESUBMISSION_REQUESTED
  EXPIRED
}

model User {
  id String @id @default(uuid())

  name       String?     @db.VarChar(255)
  nickName   String?     @db.VarChar(255)
  salutation Salutation?
  gender     Gender?
  dob        DateTime?

  email         String?  @unique
  phone         String?  @unique
  emailVerified Boolean  @default(false)
  phoneVerified Boolean  @default(false)

  avatarUrl String?
  avatarKey String?

  role             UserRole         @default(USER)
  isBanned         Boolean          @default(false)

  onboardingStatus OnboardingStatus @default(PENDING)
  isVerified       Boolean          @default(false)
  dlVerified       Boolean          @default(false)

  stripeAccountId          String?
  stripeOnboardingComplete Boolean @default(false)

  tosAcceptedAt     DateTime?
  tosVersion        String?
  privacyAcceptedAt DateTime?
  privacyVersion    String?

  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  travelPreference TravelPreference?
  vehicles         Vehicle[]
  refreshTokens    RefreshToken[]
  rides            Ride[]
  bookings         RideBooking[]     @relation("PassengerBookings")
  ratingsGiven     RideRating[]      @relation("RatingsGiven")
  ratingsReceived  RideRating[]      @relation("RatingsReceived")
  ratingStats      UserRatingStats?

  // Chat relations
  conversationsAsA Conversation[] @relation("ConversationUserA")
  conversationsAsB Conversation[] @relation("ConversationUserB")
  sentMessages     Message[]      @relation("MessageSender")
  receivedMessages Message[]      @relation("MessageReceiver")
  deviceTokens     DeviceToken[]
  emergencyAlerts  EmergencyAlert[]

  // Notification relations
  notifications Notification[]

  // DL Verification relations
  dlVerifications DlVerification[]

  // Report / Block relations
  reportsMade     UserReport[] @relation("ReportsMade")
  reportsReceived UserReport[] @relation("ReportsReceived")
  blocksInitiated UserBlock[]  @relation("BlocksInitiated")
  blocksReceived  UserBlock[]  @relation("BlocksReceived")

  // Payment relations
  paymentMethods PaymentMethod[]

  @@index([id])
}

model TravelPreference {
  id String @id @default(uuid())

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  chattiness Chattiness?
  pets       PetsPreference?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([id])
}

model Vehicle {
  id String @id @default(uuid())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  licenseCountry String
  licenseNumber  String

  brand      String?
  model_num  String?
  model_name String?
  type       VehicleType?
  color      String?
  year       Int?
  imageUrl     String?
  isVerified Boolean      @default(false)
  deletedAt  DateTime?

  documents VehicleDocument[]
  rides     Ride[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([userId, deletedAt])
}

model VehicleDocument {
  id           String       @id @default(uuid())
  vehicleId    String
  vehicle      Vehicle      @relation(fields: [vehicleId], references: [id], onDelete: Cascade)
  imageUrl     String
  documentType DocumentType

  createdAt DateTime @default(now())

  @@index([vehicleId])
}

model RefreshToken {
  id String @id @default(uuid())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  token     String   @unique
  expiresAt DateTime
  revoked   Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([expiresAt])
}

// ============ RIDE ENUMS ============
enum RideStatus {
  DRAFT
  PUBLISHED
  SCHEDULED
  READY_TO_START
  IN_PROGRESS
  COMPLETION_PENDING
  COMPLETED
  CANCELLED
  DISPUTED
}

enum WaypointType {
  PICKUP
  DROPOFF
  STOPOVER
}

enum BookingStatus {
  PAYMENT_PENDING
  DRIVER_PENDING
  CONFIRMED
  WAITING_FOR_PICKUP
  DRIVER_ARRIVED
  OTP_PENDING
  ONBOARD
  DROP_PENDING
  DRIVER_DROPPED
  IN_PROGRESS
  PAYMENT_FAILED
  CANCELLED
  COMPLETED
  NO_SHOW
  DRIVER_MISSED_PICKUP
  DISPUTED
}

// ============ CHAT ENUMS ============
enum MessageType {
  TEXT
  IMAGE
  FILE
  LOCATION
  SYSTEM
}

// ============ RIDE MODELS ============
model Ride {
  id String @id @default(uuid())

  driverId  String
  driver    User     @relation(fields: [driverId], references: [id], onDelete: Cascade)
  vehicleId String?
  vehicle   Vehicle? @relation(fields: [vehicleId], references: [id], onDelete: SetNull)

  // Origin city details
  originPlaceId  String
  originAddress  String
  originLat      Float
  originLng      Float

  // Destination city details
  destinationPlaceId  String
  destinationAddress  String
  destinationLat      Float
  destinationLng      Float

  // Encoded polyline for the selected route
  routePolyline        String?
  routeDistanceMeters  Int?
  routeDurationSeconds Int?

  // Schedule
  departureDate DateTime @db.Date
  departureTime String // HH:mm format

  // Capacity & Pricing
  totalSeats       Int
  availableSeats   Int
  basePricePerSeat Float
  currency         String @default("GBP")

  // Luggage & seating preferences
  maxLuggagePerPerson Int     @default(2)
  backSeatOnly        Boolean @default(false)
  femaleOnly          Boolean @default(false)
  noSmoking           Boolean @default(false)
  noBicycles          Boolean @default(false)
  childSeatAvailable  Boolean @default(false)

  // Additional info
  notes String?

  status RideStatus @default(DRAFT)

  // Operational timestamps
  actualStartTime DateTime?
  actualEndTime   DateTime?
  currentStopSequence Int?

  // Relations
  waypoints        RideWaypoint[]
  bookings         RideBooking[]
  ratings          RideRating[]
  segmentCapacity  RideSegmentCapacity[]
  locationUpdates  LocationUpdate[]
  rideEvents       RideEvent[]
  pricingSnapshot  RidePricingSnapshot?
  disputes         Dispute[]
  emergencyAlerts  EmergencyAlert[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([driverId])
  @@index([vehicleId])
  @@index([status])
  @@index([departureDate])
  @@index([status, departureDate])
}

model RideWaypoint {
  id     String @id @default(uuid())
  rideId String
  ride   Ride   @relation(fields: [rideId], references: [id], onDelete: Cascade)

  placeId String
  address String
  lat     Float
  lng     Float

  // Type: PICKUP, DROPOFF, or STOPOVER
  waypointType WaypointType

  // Order of this waypoint in the route
  orderIndex Int

  // Optional custom price for this waypoint
  pricePerSeat Float?

  // Estimated arrival time at this waypoint (HH:MM format)
  estimatedArrivalTime String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([rideId])
}

model RideSegmentCapacity {
  id     String @id @default(uuid())
  rideId String
  ride   Ride   @relation(fields: [rideId], references: [id], onDelete: Cascade)

  // Edge defined by consecutive segment positions (origin=0, stopovers=1..N, destination=N+1)
  fromPosition  Int
  toPosition    Int

  // How many seats are currently occupied on this edge
  occupiedSeats Int @default(0)

  @@unique([rideId, fromPosition, toPosition])
  @@index([rideId])
}

model RideBooking {
  id        String @id @default(uuid())
  rideId    String
  ride      Ride   @relation(fields: [rideId], references: [id], onDelete: Cascade)
  passengerId String
  passenger   User   @relation("PassengerBookings", fields: [passengerId], references: [id], onDelete: Cascade)

  pickupWaypointId  String?
  dropoffWaypointId String?

  // Segment snapshot (stored at booking time for stability)
  pickupAddress     String?
  dropoffAddress    String?
  segmentFare       Float?
  pickupPosition    Int?
  dropoffPosition   Int?

  seatsBooked Int   @default(1)
  totalPrice  Float

  status BookingStatus @default(PAYMENT_PENDING)

  stripePaymentIntentId   String?   @unique
  stripeChargeId          String?
  paymentAmount           Float?
  paymentCurrency         String?
  paymentCapturedAt       DateTime?
  refundId                String?
  refundedAt              DateTime?
  refundAmount            Float?
  refundPercent           Float?
  driverDecisionDeadlineAt  DateTime?
  driverDecisionAt        DateTime?
  deadlineExpiredNotifiedAt DateTime?
  deadlineExtendedAt      DateTime?
  autoCancelledAt         DateTime?
  cancelledAt             DateTime?
  cancelledByRole         String?
  cancellationReason      String?
  driverRejectionReason   String?
  driverCancellationReason String?
  driverPenaltyAppliedAt  DateTime?
  driverPenaltyValue      Float?
  pickupOtp               String?
  dropOtp                 String?
  pickupOtpHash           String?
  pickupOtpExpiresAt      DateTime?
  pickupOtpVerifiedAt     DateTime?
  dropOtpHash             String?
  dropOtpExpiresAt        DateTime?
  dropOtpVerifiedAt       DateTime?
  otpAttemptCount         Int       @default(0)

  // Request expiry (rider-selected deadline)
  responseExpiryOption    String?   // ONE_HOUR, THREE_HOURS, SIX_HOURS, TWELVE_HOURS, TWENTY_FOUR_HOURS, BEFORE_DEPARTURE
  responseExpiryHours     Int?
  captureMethod           String?   @default("automatic") // automatic, manual
  withdrawnAt             DateTime?
  withdrawnReason         String?
  reminderSentAt          DateTime?

  // Operational timestamps
  driverArrivedAt     DateTime?
  waitTimerStartedAt  DateTime?
  onboardedAt         DateTime?
  dropoffConfirmedAt  DateTime?
  riderDropoffConfirmedAt DateTime?
  noShowMarkedAt      DateTime?
  completedAt         DateTime?

  ratings RideRating[]
  payment Payment?
  disputes      Dispute[]
  trackingLinks TrackingLink[]
  emergencyAlerts EmergencyAlert[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([rideId])
  @@index([passengerId])
  @@index([status])
  @@index([rideId, status])
  @@index([passengerId, status])
  @@index([driverDecisionDeadlineAt])
}

model RideRating {
  id String @id @default(uuid())

  bookingId String
  booking   RideBooking @relation(fields: [bookingId], references: [id], onDelete: Cascade)

  rideId String
  ride   Ride @relation(fields: [rideId], references: [id], onDelete: Cascade)

  raterId String
  rater   User @relation("RatingsGiven", fields: [raterId], references: [id], onDelete: Cascade)

  rateeId String
  ratee   User @relation("RatingsReceived", fields: [rateeId], references: [id], onDelete: Cascade)

  stars      Int
  reviewText String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([bookingId, raterId])
  @@index([bookingId])
  @@index([rateeId, createdAt])
}

model UserRatingStats {
  id String @id @default(uuid())

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  totalRatings  Int   @default(0)
  totalStars    Int   @default(0)
  averageRating Float @default(0)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([averageRating])
}

model StripeWebhookEvent {
  id              String   @id @default(uuid())
  stripeEventId   String   @unique
  eventType       String
  paymentIntentId String?
  processedAt     DateTime @default(now())
  payload         Json?
}

model DriverPenaltyEvent {
  id             String   @id @default(uuid())
  driverId       String
  bookingId      String
  penaltyPercent Float
  reason         String
  createdAt      DateTime @default(now())

  @@index([driverId, createdAt])
  @@index([bookingId])
}

model ContentPost {
  id          String   @id
  slug        String   @unique
  title       String
  excerpt     String
  body        String
  category    String
  status      String   @default("DRAFT")
  publishedAt DateTime?
  readTime    String
  locale      String
  createdBy   String
  updatedBy   String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([status, locale, publishedAt])
  @@index([updatedAt])
}

model ContentPostAudit {
  id        String   @id @default(uuid())
  postId    String
  action    String
  actorId   String
  snapshot  Json?
  createdAt DateTime @default(now())

  @@index([postId, createdAt])
  @@index([action, createdAt])
}

// ============ PAYMENT & PRICING MODELS ============
model Payment {
  id                     String    @id @default(uuid())
  bookingId              String    @unique
  rideId                 String
  riderId                String
  stripePaymentIntentId  String?   @unique
  amountTotal            Float
  currency               String
  fareAmount             Float
  platformFeeAmount      Float     @default(0)
  status                 String    @default("CREATED") // CREATED, PAYMENT_PENDING, PAID, HELD_IN_ESCROW, PAYOUT_ELIGIBLE, TRANSFER_CREATED, PAYOUT_COMPLETED, REFUND_PENDING, REFUNDED, PAYMENT_FAILED
  failureReason          String?
  payoutEligibleAt       DateTime?
  createdAt              DateTime  @default(now())
  updatedAt              DateTime  @updatedAt

  booking RideBooking @relation(fields: [bookingId], references: [id])
  payoutItems PayoutItem[]

  @@index([status])
  @@index([riderId, createdAt])
  @@index([rideId])
}

model LedgerEntry {
  id            String   @id @default(uuid())
  entryGroupId  String
  paymentId     String?
  bookingId     String?
  userId        String?
  accountType   String   // RIDER, DRIVER, PLATFORM, PROVIDER
  entryType     String   // RIDER_PAYMENT_RECEIVED, DRIVER_EARNING_LIABILITY, PLATFORM_FEE_REVENUE, STRIPE_FEE_EXPENSE, REFUND_TO_RIDER, DRIVER_TRANSFER_CREATED, PAYOUT_FAILURE_REVERSAL
  direction     String   // DEBIT, CREDIT
  amount        Float
  currency      String
  metadataJson  Json?
  createdAt     DateTime @default(now())

  @@index([bookingId])
  @@index([userId, createdAt])
  @@index([entryGroupId])
  @@index([paymentId])
}

model PayoutBatch {
  id               String    @id @default(uuid())
  driverId         String
  status           String    @default("PENDING") // PENDING, PROCESSING, COMPLETED, FAILED
  currency         String
  amountTotal      Float
  stripeTransferId String?
  stripePayoutId   String?
  failureReason    String?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  items PayoutItem[]

  @@index([driverId, createdAt])
  @@index([status])
}

model PayoutItem {
  id             String   @id @default(uuid())
  payoutBatchId  String
  bookingId      String
  paymentId      String
  driverAmount   Float
  platformFee    Float
  status         String   @default("PENDING") // PENDING, COMPLETED, FAILED
  createdAt      DateTime @default(now())

  batch   PayoutBatch @relation(fields: [payoutBatchId], references: [id])
  payment Payment     @relation(fields: [paymentId], references: [id])

  @@index([payoutBatchId])
  @@index([bookingId])
}

model PaymentEventOutbox {
  id            String    @id @default(uuid())
  eventType     String
  aggregateType String    // PAYMENT, BOOKING, PAYOUT
  aggregateId   String
  payloadJson   Json
  status        String    @default("PENDING") // PENDING, PROCESSING, PROCESSED, FAILED
  retryCount    Int       @default(0)
  nextRetryAt   DateTime?
  createdAt     DateTime  @default(now())
  processedAt   DateTime?

  @@index([status, nextRetryAt])
  @@index([aggregateType, aggregateId])
}

model PaymentMethod {
  id                      String    @id @default(uuid())
  userId                  String
  stripeCustomerId        String
  stripePaymentMethodId   String    @unique
  brand                   String?
  last4                   String?
  expMonth                Int?
  expYear                 Int?
  isDefault               Boolean   @default(false)
  status                  String    @default("ACTIVE") // ACTIVE, REMOVED
  createdAt               DateTime  @default(now())
  updatedAt               DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id])
  @@index([userId])
}

model PricingConfig {
  id                   String    @id @default(uuid())
  regionCode           String
  currency             String    @default("EUR")
  minRatePerKm         Float
  recommendedRatePerKm Float
  maxRatePerKm         Float
  minimumSeatPrice     Float     @default(3.00)
  roundingStrategy     String    @default("NEAREST_EURO") // NEAREST_EURO, NEAREST_HALF_EURO
  active               Boolean   @default(true)
  validFrom            DateTime  @default(now())
  validTo              DateTime?
  createdBy            String?
  createdAt            DateTime  @default(now())
  updatedAt            DateTime  @updatedAt

  @@index([regionCode, active])
}

model RidePricingSnapshot {
  id                       String   @id @default(uuid())
  rideId                   String   @unique
  pricingVersion           String   @default("DISTANCE_RATE_V1")
  regionCode               String
  currency                 String
  distanceKm               Float
  minRatePerKm             Float
  recommendedRatePerKm     Float
  maxRatePerKm             Float
  minimumSeatPrice         Float
  recommendedPricePerSeat  Float
  minAllowedPricePerSeat   Float
  maxAllowedPricePerSeat   Float
  selectedPricePerSeat     Float
  roundingStrategy         String
  createdAt                DateTime @default(now())

  ride Ride @relation(fields: [rideId], references: [id])
}

// ============ CHAT MODELS ============
model Conversation {
  id String @id @default(uuid())

  // Normalized pair for 1:1 uniqueness (userAId < userBId lexicographically)
  userAId String
  userBId String
  userA   User   @relation("ConversationUserA", fields: [userAId], references: [id], onDelete: Cascade)
  userB   User   @relation("ConversationUserB", fields: [userBId], references: [id], onDelete: Cascade)

  lastMsgAt      DateTime?
  lastMsgPreview String?

  messages Message[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userAId, userBId])
  @@index([userAId, lastMsgAt])
  @@index([userBId, lastMsgAt])
}

model Message {
  id             String   @id @default(uuid())
  conversationId String
  senderId       String
  receiverId     String

  type        MessageType @default(TEXT)
  text        String?
  payloadJson Json?
  clientMsgId String? // Idempotency key from client

  // Status timestamps
  deliveredAt DateTime?
  readAt      DateTime?

  createdAt DateTime @default(now())

  conversation Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  sender       User         @relation("MessageSender", fields: [senderId], references: [id], onDelete: Cascade)
  receiver     User         @relation("MessageReceiver", fields: [receiverId], references: [id], onDelete: Cascade)

  @@unique([senderId, clientMsgId])
  @@index([conversationId, createdAt])
  @@index([conversationId, receiverId, readAt])
  @@index([receiverId, deliveredAt, createdAt])
}

model DeviceToken {
  id       String @id @default(uuid())
  userId   String
  platform String // ios / android
  token    String @unique

  createdAt  DateTime  @default(now())
  lastSeenAt DateTime?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model Notification {
  id     String @id @default(uuid())
  userId String
  type   String // chat_message, booking_confirmed, ride_update, system, etc.
  title  String
  body   String
  data   Json?  // Additional structured data (e.g. rideId, bookingId, senderId)

  isRead Boolean   @default(false)
  readAt DateTime?

  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt])
  @@index([userId, isRead])
}

model EmergencyAlert {
  id String @id @default(uuid())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  rideId String?
  ride   Ride?  @relation(fields: [rideId], references: [id], onDelete: SetNull)

  bookingId String?
  booking   RideBooking? @relation(fields: [bookingId], references: [id], onDelete: SetNull)

  role    String
  status  String @default("OPEN") // OPEN, ACKNOWLEDGED, RESOLVED, FALSE_ALARM
  message String?
  lat     Float?
  lng     Float?

  createdAt      DateTime  @default(now())
  acknowledgedAt DateTime?
  resolvedAt     DateTime?
  resolvedBy     String?

  @@index([status, createdAt])
  @@index([userId, createdAt])
  @@index([rideId, createdAt])
  @@index([bookingId, createdAt])
}

// ============ REPORT / BLOCK MODELS ============
model UserReport {
  id         String @id @default(uuid())
  reporterId String
  reportedId String
  reporter   User   @relation("ReportsMade", fields: [reporterId], references: [id], onDelete: Cascade)
  reported   User   @relation("ReportsReceived", fields: [reportedId], references: [id], onDelete: Cascade)

  reason    String
  details   String?
  resolved  Boolean  @default(false)

  createdAt DateTime @default(now())

  @@unique([reporterId, reportedId])
  @@index([reportedId])
  @@index([resolved, createdAt])
}

model UserBlock {
  id        String @id @default(uuid())
  blockerId String
  blockedId String
  blocker   User   @relation("BlocksInitiated", fields: [blockerId], references: [id], onDelete: Cascade)
  blocked   User   @relation("BlocksReceived", fields: [blockedId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@unique([blockerId, blockedId])
  @@index([blockerId])
  @@index([blockedId])
}

// ============ RIDE OPERATIONS MODELS ============
model LocationUpdate {
  id        String   @id @default(uuid())
  rideId    String
  ride      Ride     @relation(fields: [rideId], references: [id], onDelete: Cascade)
  driverId  String
  lat       Float
  lng       Float
  speed     Float?
  heading   Float?
  accuracy  Float?
  timestamp DateTime

  createdAt DateTime @default(now())

  @@index([rideId, timestamp])
  @@index([driverId, timestamp])
}

model RideEvent {
  id               String   @id @default(uuid())
  rideId           String
  ride             Ride     @relation(fields: [rideId], references: [id], onDelete: Cascade)
  bookingId        String?
  actionId         String   @unique  // Client-generated UUID for idempotency
  eventType        String
  actorType        String   // DRIVER, RIDER, SYSTEM
  actorId          String
  lat              Float?
  lng              Float?
  clientTimestamp   DateTime
  serverTimestamp   DateTime @default(now())
  validationStatus String   @default("VALID") // VALID, WARNING, SUSPICIOUS
  metadataJson     Json?

  @@index([rideId, serverTimestamp])
  @@index([actionId])
}

// ============ DISPUTE & SAFETY MODELS ============
model Dispute {
  id             String    @id @default(uuid())
  rideId         String
  bookingId      String
  raisedBy       String    // userId of whoever raised it
  reason         String
  description    String?
  status         String    @default("OPEN") // OPEN, EVIDENCE_COLLECTED, AUTO_RESOLVED_RIDER_REFUND, AUTO_RESOLVED_DRIVER_PAYOUT, NEEDS_MANUAL_REVIEW, WAITING_FOR_USER_RESPONSE, RESOLVED_REFUND, RESOLVED_PAYOUT, RESOLVED_SPLIT, ESCALATED
  evidenceJson   Json?
  recommendation String?
  riskScore      Float?
  resolution     String?
  resolvedBy     String?
  createdAt      DateTime  @default(now())
  resolvedAt     DateTime?

  ride    Ride        @relation(fields: [rideId], references: [id])
  booking RideBooking @relation(fields: [bookingId], references: [id])

  @@index([status, createdAt])
  @@index([raisedBy])
  @@index([bookingId])
}

model TrackingLink {
  id          String    @id @default(uuid())
  bookingId   String
  token       String    @unique
  tokenHash   String    @unique
  expiresAt   DateTime
  accessScope String    @default("LOCATION_ONLY") // LOCATION_ONLY, LOCATION_AND_ETA
  createdBy   String
  createdAt   DateTime  @default(now())
  revokedAt   DateTime?

  booking RideBooking @relation(fields: [bookingId], references: [id])

  @@index([bookingId])
}

// ============ RECONCILIATION MODELS ============
model ReconciliationIssue {
  id              String    @id @default(uuid())
  paymentId       String?
  bookingId       String?
  issueType       String    // STRIPE_MISMATCH, MISSING_WEBHOOK, ORPHAN_INTENT, LEDGER_IMBALANCE, STALE_ESCROW
  severity        String    @default("MEDIUM") // LOW, MEDIUM, HIGH, CRITICAL
  description     String
  stripeState     String?   // Payment intent status from Stripe
  internalState   String?   // Payment status in our DB
  detectedAt      DateTime  @default(now())
  autoRepaired    Boolean   @default(false)
  repairedAt      DateTime?
  resolvedBy      String?   // admin userId
  resolvedAt      DateTime?
  resolution      String?   // Description of how it was resolved
  metadataJson    Json?

  @@index([issueType, detectedAt])
  @@index([severity, resolvedAt])
  @@index([paymentId])
}

// ============ DL VERIFICATION MODELS ============
model DlVerification {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  veriffSessionId  String               @unique
  veriffSessionUrl String
  status           DlVerificationStatus @default(PENDING)
  decisionCode     Int?
  reasonCode       String?
  decisionPayload  Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([veriffSessionId])
}
